syntax = "proto3";
package rpc;

import "google/protobuf/empty.proto";

option go_package = "/rpc";


service UrlService {
  rpc SetUrl(UrlRequest) returns (UrlResponse);
  rpc GetAll(google.protobuf.Empty) returns (UrlListResponse);
  rpc DeleteUrl(UrlRequest) returns (UrlResponse);

  rpc SetProxy(ProxyRequest) returns (ProxyResponse);
  rpc GetAllProxy(google.protobuf.Empty) returns (ProxyListResponse);
  rpc DeleteProxy(ProxyRequest) returns (ProxyResponse);
}

message UrlRequest {
  string url = 1;
  int32 interval = 2;
}

message UrlResponse {
  string result = 1;
}

message UrlListResponse {
  repeated string urls = 1;
}

message ProxyRequest {
  string proxy = 1;
}

message ProxyResponse {
  string result = 1;
}

message ProxyListResponse {
  repeated string proxyList = 1;
}